--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-item-name">Mark Guerrero</h3>
-              <p class="team-list-item-bio">Product Designer</p>
+              <div class="team-list-conteiner">
+                <h3 class="team-list-item-name">Mark Guerrero</h3>
+                <p class="team-list-item-bio">Product Designer</p>
+              </div>
             </li>
             <!-- Tom Ford -->
             <li class="team-list-item">
@@ -126,8 +128,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-item-name">Tom Ford</h3>
-              <p class="team-list-item-bio">Frontend Developer</p>
+              <div class="team-list-conteiner">
+                <h3 class="team-list-item-name">Tom Ford</h3>
+                <p class="team-list-item-bio">Frontend Developer</p>
+              </div>
             </li>
             <!-- Camila Garcia -->
             <li class="team-list-item">
@@ -137,8 +141,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-item-name">Camila Garcia</h3>
-              <p class="team-list-item-bio">Marketing</p>
+              <div class="team-list-conteiner">
+                <h3 class="team-list-item-name">Camila Garcia</h3>
+                <p class="team-list-item-bio">Marketing</p>
+              </div>
             </li>
             <!-- Daniel Wilson -->
             <li class="team-list-item">
@@ -148,8 +154,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-list-item-name">Daniel Wilson</h3>
-              <p class="team-list-item-bio">UI Designer</p>
+              <div class="team-list-conteiner">
+                <h3 class="team-list-item-name">Daniel Wilson</h3>
+                <p class="team-list-item-bio">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -166,8 +174,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-name">Banking App</h3>
-              <p class="portfolio-list-item-info">App</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-list-item-name">Banking App</h3>
+                <p class="portfolio-list-item-info">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -176,8 +186,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-name">Cashless Payment</h3>
-              <p class="portfolio-list-item-info">Marketing</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-list-item-name">Cashless Payment</h3>
+                <p class="portfolio-list-item-info">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -187,8 +199,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-name">Meditation App</h3>
-              <p class="portfolio-list-item-info">App</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-list-item-name">Meditation App</h3>
+                <p class="portfolio-list-item-info">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -197,8 +211,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-name">Taxi Service</h3>
-              <p class="portfolio-list-item-info">Marketing</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-list-item-name">Taxi Service</h3>
+                <p class="portfolio-list-item-info">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -207,8 +223,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-name">Screen Illustrations</h3>
-              <p class="portfolio-list-item-info">Design</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-list-item-name">Screen Illustrations</h3>
+                <p class="portfolio-list-item-info">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -217,8 +235,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-item-name">Online Courses</h3>
-              <p class="portfolio-list-item-info">Marketing</p>
+              <div class="portfolio-wrapper">
+                <h3 class="portfolio-list-item-name">Online Courses</h3>
+                <p class="portfolio-list-item-info">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
